--- a/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -422,3 +422,5 @@ _UI_EObjectToModelElementIdMap_value_feature = Value
 _UI_FileIdentifier_type = File Identifier
 _UI_ProjectHistory_sharedProperties_feature = Shared Properties
 _UI_ACUser_effectiveGroups_feature = Effective Groups
+_UI_ProjectHistory_sharedProperties_feature = Shared Properties
+_UI_ACUser_effectiveGroups_feature = Effective Groups
