--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -725,6 +725,32 @@
               </and>
            </visibleWhen>
         </command>
+        <command
+              commandId="org.eclipse.emf.emfstore.client.ui.commitProject"
+              icon="icons/arrow_out.png"
+              label="NEW Commit  Project"
+              style="push">
+           <visibleWhen
+                 checkEnabled="false">
+              <and>
+                 <iterate
+                       ifEmpty="false"
+                       operator="and">
+                    <instanceof
+                          value="org.eclipse.emf.emfstore.client.model.ProjectSpace">
+                    </instanceof>
+                    <test
+                          forcePluginActivation="true"
+                          property="org.eclipse.emf.emfstore.client.ui.commands.projectIsShared"
+                          value="false">
+                    </test>
+                 </iterate>
+                 <count
+                       value="1">
+                 </count>
+              </and>
+           </visibleWhen>
+        </command>
      </menuContribution>
      <menuContribution
             locationURI="popup:org.eclipse.emf.ecp.navigator.viewer?after=org.unicase.ui.stem.ShowInStatusView">
