Working on default session provider

--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -1286,7 +1286,7 @@
    <extension
          point="org.eclipse.emf.emfstore.client.sessionprovider">
       <sessionProvider
-            class="org.eclipse.emf.emfstore.client.ui.dialogs.login.LoginController">
+            class="org.eclipse.emf.emfstore.client.ui.dialogs.login.DefaultSessionProvider">
       </sessionProvider>
    </extension>
    <extension
